--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Abdullah Web Developer</title>
+    <link rel="icon" href="images/icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
